--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
 <header>
-    <img id="background-img"  src="/img/background 2.png" alt="">
+    <img id="background-img"  src="img/background 2.png" alt="">
 <div id="header">
     <div id="header1">
         <div class="container">
             <div id="logo">
-                <a href="#"> <img src="/img/cloud.png" alt="cloud" width="24.65" height="17.4"> CLOUDBUDGET</a>
+                <a href="#"> <img src="img/cloud.png" alt="cloud" width="24.65" height="17.4"> CLOUDBUDGET</a>
             </div>
             <div id="nav-link">
                 <a href="#">overview</a>
@@ -60,8 +60,8 @@
         </div>
         <div id="section1_photo">
             <div>
-            <img id="second" src="/img/Video_bg.png" alt="video">
-            <img  src="/img/button-play.png" alt="button-play" width="66" height="66">
+            <img id="second" src="img/Video_bg.png" alt="video">
+            <img  src="img/play.png" alt="button-play" width="66" height="66">
             </div>
         </div>
         </div>
@@ -70,7 +70,7 @@
         <h1 id="sec2">Features</h1>
         <div id="section2_content">
             <div id="bg-text">
-                <img src="/img/Bg-sec2-1.png" alt="Bg-sec2-1">
+                <img src="img/Bg-sec2-1.png" alt="Bg-sec2-1">
                 <h1 id="sec2_space"></h1>
                 <div id="text">
                     <div>
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div id="bg-text">
-                <img src="/img/Bg-sec2-2.png" alt="Bg-sec2-2">
+                <img src="img/Bg-sec2-2.png" alt="Bg-sec2-2">
                 <h1 id="sec2_space"></h1>
                 <div id="text">
                     <div>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div id="bg-text">
-                <img src="/img/Bg-sec2-3.png" alt="Bg-sec2-3">
+                <img src="img/Bg-sec2-3.png" alt="Bg-sec2-3">
                 <h1 id="sec2_space"></h1>
                 <div id="text">
                     <div>
@@ -109,27 +109,27 @@
         <div id="section3_content">
             <div id="section3_photo">
                 <div>
-                    <img id="number" src="/img/01.png" alt="1">
+                    <img id="number" src="img/01.png" alt="1">
                     <div id="frame">
-                    <img  src="/img/Frame 3.png" alt="Frame3">
+                    <img  src="img/Frame 3.png" alt="Frame3">
                     </div>
                 </div>
                 <div>
-                    <img id="number" src="/img/02.png" alt="2">
+                    <img id="number" src="img/02.png" alt="2">
                     <div id="frame">
-                    <img  src="/img/Frame 4.png" alt="Frame4">
+                    <img  src="img/Frame 4.png" alt="Frame4">
                     </div>
                 </div>
                 <div>
-                    <img id="number" src="/img/03.png" alt="3">
+                    <img id="number" src="img/03.png" alt="3">
                     <div id="frame">
-                    <img  src="/img/Frame 5.png" alt="Frame5">
+                    <img  src="img/Frame 5.png" alt="Frame5">
                     </div>
                 </div>
                 <div>
-                    <img id="number" src="/img/04.png" alt="4">
+                    <img id="number" src="img/04.png" alt="4">
                     <div id="frame">
-                    <img src="/img/Frame6.png" alt="Frame6">
+                    <img src="img/Frame6.png" alt="Frame6">
                     </div>
                 </div>
             </div>
@@ -162,9 +162,9 @@
             <h1>Stay focused on saving money</h1>
             <p>It is important to stay focused on saving money in any way you can. We help you monitor your spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to get started!</p>
             <div id="app-img">
-                <img src="/img/playstore.png" alt="playstore">
-                <img id="appstore" src="/img/appstore.png" alt="appstore">
-                <img src="/img/windows.png" alt="windows">
+                <img src="img/playstore.png" alt="playstore">
+                <img id="appstore" src="img/appstore.png" alt="appstore">
+                <img src="img/windows.png" alt="windows">
             </div>
             </div>
         </div>
@@ -172,13 +172,13 @@
             <div id="slider" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" >
-                        <img class="d-block img-fliud" src="/img/art-photo2.png" alt="1" width="445" height="311" >
+                        <img class="d-block img-fliud" src="img/art-photo2.png" alt="1" width="445" height="311" >
                     </div>
                     <div class="carousel-item ">
-                        <img class="d-block img-fliud" src="/img/art-photo1.png" alt="2" width="445" height="311" >
+                        <img class="d-block img-fliud" src="img/art-photo1.png" alt="2" width="445" height="311" >
                     </div>
                     <div class="carousel-item ">
-                        <img class="d-block img-fliud" src="/img/art-photo3.png" alt="3" width="445" height="311" >
+                        <img class="d-block img-fliud" src="img/art-photo3.png" alt="3" width="445" height="311" >
                     </div>
                 </div> 
                 <a href="#slider" class="carousel-control-prev" data-slide="prev">
@@ -243,20 +243,20 @@
     <div>
         <h1>Get in Touch</h1>
         <h4>info@cloudbudget.com <br> +1 844-721-7120 </h4>
-        <img class="mt-2 mx-1" src="/img/facebook.png" alt="facebook" width="14" height="14">
-        <img class="mt-2 mx-1" src="/img/feather-linkedin.png" alt="linkedin" width="14" height="14">
-        <img class="mt-2 mx-1" src="/img/twiter.png" alt="twiter" width="14" height="14">
+        <img class="mt-2 mx-1" src="img/facebook.png" alt="facebook" width="14" height="14">
+        <img class="mt-2 mx-1" src="img/feather-linkedin.png" alt="linkedin" width="14" height="14">
+        <img class="mt-2 mx-1" src="img/twiter.png" alt="twiter" width="14" height="14">
     </div>
     <div>
         <h1>We Support</h1>
-        <img src="/img/secure-p-1 1.png" alt="card" style="padding: 33px 0;" >
+        <img src="img/secure-p-1 1.png" alt="card" style="padding: 33px 0;" >
     </div>
     </div>
     <p id="footer-last">Copyright 2018 CloudBudget</p>
 </div>
 </footer>
-</body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
 </html>
